--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .container-fluid {
-    margin: 2em 4em;
+    margin: 1em 4em;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -38,7 +38,7 @@ body {
 
 .container-main {
     display: flex;
-    margin-top: 8em;
+    margin-top: 5em;
     flex-direction: column;
     align-items: center;
 }
@@ -75,6 +75,7 @@ body {
 .container-form {
     display: flex;
     margin: 20px auto;
+    padding: auto;
     border-radius: 4em;
     justify-content: center;
     background: black;
@@ -120,7 +121,7 @@ form {
     margin: 1em 2em;
 }
 
-@media only screen and (min-width: 1080px){
+@media only screen and (min-width: 768px){
     
     .container-fluid {
         width: 90%;
